--- a/geral.css
+++ b/geral.css
@@ -48,8 +48,17 @@ header img {
 
 .conteiner {
   display: grid;
-  grid-template-columns: 90vh 90vh 90vh;
+  grid-template-columns: repeat(3, 50vh);
   grid-template-rows: repeat(3, 50vh);
   gap: 30px;
 }
 
+.grid_item {
+  background-color: var(--caixas);
+  padding: 20px;
+}
+
+.item_monaco {
+  grid-column: 1 / 3; 
+  grid-row: 1; 
+}
