--- a/geral.css
+++ b/geral.css
@@ -66,16 +66,28 @@ header img {
 }
 
 .item_monaco img {
-  width: 97vh;
+  width: 124vh;
   height: 43vh;
 }
 
 .item_petra {
   grid-column: 3 / 3;
   grid-row: 1;
+  margin-left: 30vh;
+    width: 62vh;
 }
 
 .item_petra img {
-  width: 97vh;
+  width: 55vh;
   height: 42vh;
+}
+
+.item_val {
+  grid-column: 1 / 3;
+  grid-row: 2;
+}
+
+.item_val img {
+  width:20vh ;
+  height: 30vh;
 }
