--- a/geral.css
+++ b/geral.css
@@ -72,15 +72,18 @@ header img {
 }
 
 .item_petra {
-  grid-column: 3 / 3;
-  grid-row: 1;
-  margin-left: 30vh;
+ grid-column: 3 / 3;
+    grid-row-start: 1;
+    margin-left: 30vh;
+    grid-row-end: 2;
     width: 62vh;
+    height: 105vh;
 }
 
 .item_petra img {
   width: 55vh;
   height: 42vh;
+  overflow: hidden;
 }
 
 .item_val {
