--- a/geral.css
+++ b/geral.css
@@ -30,7 +30,7 @@ header h1 {
 
 }
 footer {
-  background-color: var(--cabecalho);
+  background-color: var(--corpo);
   height: 12vh;
 }
 
@@ -82,7 +82,7 @@ header img {
 
 .item_petra img {
   width: 55vh;
-  height: 42vh;
+  height: 98vh;
   overflow: hidden;
 }
 
