--- a/geral.css
+++ b/geral.css
@@ -62,6 +62,17 @@ header img {
   padding: 20px;
 }
 
+.grid_item a {
+  text-decoration: none;
+  text-align: center;
+  color: #5f0909;
+
+}
+
+.grid_item a:hover {
+  color: white;
+}
+
 .item_monaco {
   grid-column: 1 / 3; 
   grid-row: 1; 
