--- a/geral.css
+++ b/geral.css
@@ -121,4 +121,12 @@ grid-column: 2 / 3;
   
  width: 55vh;
     height: 43vh;
+  }
+.item_cwb .grid_titulo {
+
+  margin-left: -122vh;
+    font-weight: bolder;
+    position: absolute;
+    font-size: 7vh;
+    
 }
