--- a/geral.css
+++ b/geral.css
@@ -122,7 +122,7 @@ grid-column: 2 / 3;
  width: 55vh;
     height: 43vh;
   }
-.item_cwb .grid_titulo {
+.item_monaco .grid_titulo {
 
   margin-left: -122vh;
     font-weight: bolder;
