--- a/geral.css
+++ b/geral.css
@@ -122,7 +122,35 @@ grid-column: 2 / 3;
  width: 55vh;
     height: 43vh;
   }
-.item_monaco .grid_titulo {
+
+  .item_monaco .grid_titulo {
+
+  margin-left: -122vh;
+    font-weight: bolder;
+    position: absolute;
+    font-size: 7vh;
+    
+}
+
+.item_petra .grid_titulo {
+
+  margin-left: -122vh;
+    font-weight: bolder;
+    position: absolute;
+    font-size: 7vh;
+    
+}
+
+.item_val .grid_titulo {
+
+  margin-left: -122vh;
+    font-weight: bolder;
+    position: absolute;
+    font-size: 7vh;
+    
+}
+
+.item_curitiba .grid_titulo {
 
   margin-left: -122vh;
     font-weight: bolder;
