--- a/monaco.css
+++ b/monaco.css
@@ -1,7 +1,7 @@
 :root {
     --cabecalho: #A31D1D;
     --corpo: #ECDCBF;
-    --caixas: #D84040;
+    --caixas: #f85a5a;
 
 }
 
@@ -47,3 +47,10 @@ footer p {
     text-align: center;
     font-size: 16px;
     color: #9c8b6c; }
+
+.informação {
+background-color: #f85a5a;
+height: 20vh;
+width: 60vh;
+margin: 5vh;
+}
