--- a/petra.css
+++ b/petra.css
@@ -63,7 +63,7 @@ background-color: #f85a5a;
 
 .informação p {
     color: white;
-    font-size: 3vh;
+    font-size: 4vh;
     text-align: center;
     font-weight: bolder;
 }
@@ -85,6 +85,7 @@ background-color: #f85a5a;
 
 .informação img {
   margin-left: 2vh;
+    height: 44vh;
     margin-top: -15vh;
     width: 29vh;
     padding-top: 18vh;
